# GRICP

./: CMakeLists.txt  README.md  main.cpp
Granulaar_Ball/: HB_Test_v3.py  HyperBallClustering_acceleration_v3.py  RHyperBallClustering_acceleration_v3.py
Granulaar_Ball/synthetic/: D2.csv  D6.csv
Registration_Result/bunny_side2/: bunny_side2_rotatey_180.ply  bunny_side2_rotatey_180_moved.ply
data_oringi/bunny_side2/: bunny_side2_overlap_60.0%.ply  bunny_side2_overlap_70.0%.ply  bunny_side2_overlap_80.0%.ply  bunny_side2_overlap_90.0%.ply
granuleball_info/bunny_side2/: bunny_side2_overlap_60.0%_pointNum.txt  bunny_side2_overlap_60.0%_radius.txt  bunny_side2_overlap_70.0%_pointNum.txt  bunny_side2_overlap_70.0%_radius.txt  bunny_side2_overlap_80.0%_pointNum.txt  bunny_side2_overlap_80.0%_radius.txt  bunny_side2_overlap_90.0%_pointNum.txt  bunny_side2_overlap_90.0%_radius.txt  bunny_side2_pointNum.txt  bunny_side2_radius.txt  bunny_side2_rotatex_100_overlap_60.0%_pointNum.txt  bunny_side2_rotatex_100_overlap_60.0%_radius.txt  bunny_side2_rotatex_100_overlap_70.0%_pointNum.txt  bunny_side2_rotatex_100_overlap_70.0%_radius.txt  bunny_side2_rotatex_100_overlap_80.0%_pointNum.txt  bunny_side2_rotatex_100_overlap_80.0%_radius.txt  bunny_side2_rotatex_100_overlap_90.0%_pointNum.txt  bunny_side2_rotatex_100_overlap_90.0%_radius.txt  bunny_side2_rotatex_100_pointNum.txt  bunny_side2_rotatex_100_radius.txt  bunny_side2_rotatex_120_overlap_60.0%_pointNum.txt  bunny_side2_rotatex_120_overlap_60.0%_radius.txt  bunny_side2_rotatex_120_overlap_70.0%_pointNum.txt  bunny_side2_rotatex_120_overlap_70.0%_radius.txt  bunny_side2_rotatex_120_overlap_80.0%_pointNum.txt  bunny_side2_rotatex_120_overlap_80.0%_radius.txt  bunny_side2_rotatex_120_overlap_90.0%_pointNum.txt  bunny_side2_rotatex_120_overlap_90.0%_radius.txt  bunny_side2_rotatex_120_pointNum.txt  bunny_side2_rotatex_120_radius.txt  bunny_side2_rotatex_150_overlap_60.0%_pointNum.txt  bunny_side2_rotatex_150_overlap_60.0%_radius.txt  bunny_side2_rotatex_150_overlap_70.0%_pointNum.txt  bunny_side2_rotatex_150_overlap_70.0%_radius.txt  bunny_side2_rotatex_150_overlap_80.0%_pointNum.txt  bunny_side2_rotatex_150_overlap_80.0%_radius.txt  bunny_side2_rotatex_150_overlap_90.0%_pointNum.txt  bunny_side2_rotatex_150_pointNum.txt  (+18 more)
(+2 files in other folders)
